sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:13: error: ';' expected but integer literal found.
      %beforeWhite -= 1;
                      ^